# data-challenges

./: README.md  pyproject.toml
01-films-vs-books/: 02 Explore book and film ratings data.ipynb  03 Join datasets together.ipynb  04 Explore other film review datasets.ipynb  Explore book and film ratings data.ipynb  Get film to book linkage.ipynb
01-films-vs-books/archive/: 03 Try to join datasets together.ipynb
01-films-vs-books/data/: book_ratings.parquet  film_metacritic_ratings.parquet  film_ratings.parquet  films_to_books.parquet
